--- a/app/src/main/res/layout/activity_fauna_detalhe.xml
+++ b/app/src/main/res/layout/activity_fauna_detalhe.xml
@@ -38,28 +38,28 @@ tools:context="com.example.fernando.myapplication.FaunaDetalheActivity">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:textColor="#000000"
+            android:textColor="#A7904C"
             android:text="Descrição:"/>
 
         <TextView
             android:id="@+id/textViewDescricacaoFauna"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
+            android:textColor="#A7904C"
             android:layout_marginBottom="20dp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:textColor="#000000"
+            android:textColor="#A7904C"
             android:text="Histórico:"/>
 
         <TextView
             android:id="@+id/textViewHistoricoFauna"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#000000"/>
+            android:textColor="#A7904C"/>
 
     </LinearLayout>
 
