--- a/app/src/main/res/layout/activity_flora_detalhe.xml
+++ b/app/src/main/res/layout/activity_flora_detalhe.xml
@@ -38,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:textColor="#000000"
+                android:textColor="#A7904C"
                 android:text="Descrição:"/>
 
             <TextView
@@ -46,21 +46,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="asdsadsadadas"
-                android:textColor="#000000"
+                android:textColor="#A7904C"
                 android:layout_marginBottom="20dp"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:textColor="#000000"
+                android:textColor="#A7904C"
                 android:text="Histórico:"/>
 
             <TextView
                 android:id="@+id/textViewHistoricoFlora"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#000000"
+                android:textColor="#A7904C"
                 android:text="asdadsaddsada"/>
 
         </LinearLayout>
