--- a/app/src/main/res/layout/activity_parque_detalhe.xml
+++ b/app/src/main/res/layout/activity_parque_detalhe.xml
@@ -38,14 +38,14 @@ tools:context="com.example.fernando.myapplication.ParqueDetalheActivity">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:textColor="#000000"
+            android:textColor="#A7904C"
             android:text="Descrição:"/>
 
         <TextView
             android:id="@+id/textViewDescricacaoParque"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
+            android:textColor="#A7904C"
             android:layout_marginBottom="20dp"/>
 
 
